--- a/index.html
+++ b/index.html
@@ -239,7 +239,9 @@ button {
     background: #0f0f0f;
     padding: 30px;
     box-sizing: border-box;
-
+    width: 100%;
+    max-width: 1200px;
+    margin: 0px auto;
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.3s ease;
@@ -593,7 +595,7 @@ window.addEventListener("resize", function() {
 </script> -->
 
 <script>
-const challengeStartDate = new Date("2026-02-27");
+const challengeStartDate = new Date("2026-02-26");
 
 function getTodayIndex() {
     const today = new Date();
